@@ -163,17 +163,18 @@ class RemoteOgoneTest < Test::Unit::TestCase
     assert_success purchase
   end
 
+  def test_successful_store_with_store_amount_at_the_gateway_level
+    gateway = OgoneGateway.new(fixtures(:ogone).merge(:store_amount => 100))
+    assert response = gateway.store(@credit_card, :billing_id => 'test_alias')
+    assert_success response
+    assert purchase = gateway.purchase(@amount, 'test_alias')
+    assert_success purchase
+  end
+
   def test_successful_store_generated_alias
     assert response = @gateway.store(@credit_card)
     assert_success response
     assert purchase = @gateway.purchase(@amount, response.billing_id)
-    assert_success purchase
-  end
-
-  def test_successful_store
-    assert response = @gateway.store(@credit_card, :billing_id => 'test_alias')
-    assert_success response
-    assert purchase = @gateway.purchase(@amount, 'test_alias')
     assert_success purchase
   end
 
