@@ -171,14 +171,22 @@ class OgoneTest < Test::Unit::TestCase
   end
 
   def test_successful_store
-    @gateway.expects(:add_pair).at_least(1)
-    @gateway.expects(:add_pair).with(anything, 'ECI', '7')
-    @gateway.expects(:ssl_post).times(2).returns(successful_purchase_response)
+    @gateway.expects(:authorize).with(1, @credit_card, :billing_id => @billing_id).returns(OgoneResponse.new(true, '', @gateway.send(:parse, successful_purchase_response), :authorization => '3014726;RES'))
+    @gateway.expects(:void).with('3014726;RES')
     assert response = @gateway.store(@credit_card, :billing_id => @billing_id)
     assert_success response
     assert_equal '3014726;RES', response.authorization
-    assert_equal '2', response.billing_id
-    assert response.test?
+    assert_equal @billing_id, response.billing_id
+  end
+
+  def test_store_amount_at_gateway_level
+    gateway = OgoneGateway.new(@credentials.merge(:store_amount => 100))
+    gateway.expects(:authorize).with(100, @credit_card, :billing_id => @billing_id).returns(OgoneResponse.new(true, '', gateway.send(:parse, successful_purchase_response_100), :authorization => '3014726;RES'))
+    gateway.expects(:void).with('3014726;RES')
+    assert response = gateway.store(@credit_card, :billing_id => @billing_id)
+    assert_success response
+    assert_equal '3014726;RES', response.authorization
+    assert_equal @billing_id, response.billing_id
   end
 
   def test_deprecated_store_option
@@ -258,7 +266,7 @@ class OgoneTest < Test::Unit::TestCase
   def test_billing_id
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
     response = @gateway.purchase(@amount, @credit_card)
-    assert_equal '2', response.billing_id
+    assert_equal @billing_id, response.billing_id
   end
 
   def test_order_id
@@ -456,7 +464,32 @@ class OgoneTest < Test::Unit::TestCase
         currency="EUR"
         PM="CreditCard"
         BRAND="VISA"
-        ALIAS="2">
+        ALIAS="#{@billing_id}">
+      </ncresponse>
+    END
+  end
+
+  def successful_purchase_response_100
+    <<-END
+      <?xml version="1.0"?><ncresponse
+        orderID="1233680882919266242708828"
+        PAYID="3014726"
+        NCSTATUS="0"
+        NCERROR="0"
+        NCERRORPLUS="!"
+        ACCEPTANCE="test123"
+        STATUS="5"
+        IPCTY="99"
+        CCCTY="99"
+        ECI="7"
+        CVCCheck="NO"
+        AAVCheck="NO"
+        VC="NO"
+        amount="100"
+        currency="EUR"
+        PM="CreditCard"
+        BRAND="VISA"
+        ALIAS="#{@billing_id}">
       </ncresponse>
     END
   end
