@@ -5,6 +5,7 @@
 * SecureNet: Fix order of xml params [duff]
 * Paymill: Add support for void [duff]
 * Add MoneyMovers gateway [jeffutter]
+* Ogone: Add a :store_amount option [rymai]
 
 == Version 1.38.1 (September 16, 2013)
 
